--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview" ,
-    "run_code_gen": "graphql-codegen --config ./src/graphql/codegen.ts -w"
+    "preview": "vite preview",
+    "run_code_gen": "graphql-codegen --config ./src/graphql/codegen.ts -w" ,
+    "build:css": "npx tailwindcss -i ./src/index.css -o ./src/output.css --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
@@ -26,17 +27,20 @@
     "yup": "^1.5.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@parcel/watcher": "^2.5.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "globals": "^15.13.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.0",
-    "vite": "^6.0.1" ,
-    "@graphql-codegen/cli": "^5.0.2" ,
-    "@parcel/watcher": "^2.5.0"
+    "vite": "^6.0.1"
   }
 }
